--- a/lerntimer.html
+++ b/lerntimer.html
@@ -43,9 +43,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    height: 100vh;
+    height: 100dvh;
     gap: 40px;
     animation: fadeIn 0.6s ease;
+    overflow: hidden;
   }
 
   .profile-screen h1 {
@@ -516,12 +518,12 @@
 
   /* === RESPONSIVE: iPhone optimization === */
   @media (max-width: 430px) {
-    .profile-screen { gap: 28px; padding: 20px; }
+    .profile-screen { gap: 20px; padding: 16px; }
     .profile-screen h1 { font-size: 2.2rem; }
     .profile-screen h1 span { font-size: 1rem; }
-    .profile-cards { flex-direction: column; gap: 16px; }
-    .profile-card { width: 220px; height: 240px; border-radius: 22px; }
-    .profile-avatar { width: 70px; height: 70px; font-size: 2.2rem; }
+    .profile-cards { flex-direction: column; gap: 14px; }
+    .profile-card { width: 220px; height: 200px; border-radius: 22px; }
+    .profile-avatar { width: 64px; height: 64px; font-size: 2rem; }
     .profile-card h2 { font-size: 1.3rem; }
 
     .timer-screen { padding: 16px 12px; }
@@ -556,14 +558,15 @@
     .break-banner .break-timer { font-size: 3rem; }
     .break-btn { padding: 12px 28px; font-size: 1rem; }
 
-    .stats-nav-btn { padding: 8px 14px; font-size: 0.85rem; top: 14px; right: 14px; }
+    .stats-nav-btn { padding: 8px 14px; font-size: 0.85rem; top: 50px; right: 12px; }
   }
 
   /* Extra small: iPhone 12 mini / SE */
   @media (max-width: 375px) {
     .profile-screen h1 { font-size: 1.9rem; }
-    .profile-card { width: 200px; height: 220px; }
-    .profile-avatar { width: 60px; height: 60px; font-size: 1.8rem; }
+    .profile-screen { gap: 16px; }
+    .profile-card { width: 200px; height: 180px; }
+    .profile-avatar { width: 56px; height: 56px; font-size: 1.8rem; }
 
     .timer-container { width: 190px; height: 190px; margin: 4px 0 14px; }
     .timer-time { font-size: 2.8rem; }
@@ -590,8 +593,8 @@
   /* Stats Button on Profile Screen */
   .stats-nav-btn {
     position: fixed;
-    top: 20px;
-    right: 20px;
+    top: 54px;
+    right: 16px;
     background: rgba(255,255,255,0.08);
     border: 2px solid rgba(255,255,255,0.12);
     color: rgba(255,255,255,0.6);
